--- a/app-frontend/src/index.css
+++ b/app-frontend/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.mobile-view {
+  display: none;
+  background-color: #ff4e4e;
+  color: white;
+  text-align: center;
+  width: 100%;
+  height: 100vh;
+}
+
+@media screen and (max-width: 880px) {
+  .App-wrapper {
+    display: none;
+  }
+
+  .mobile-view {
+    display: block;
+  }
+}
